<resources>
    <string name="app_name">PlantPal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password_too_short">Kata sandi terlalu pendek, harus lebih dari 8 karakter</string>
    <string name="invalid_email">Email tidak valid, format: nama@domain.com</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="please_login_with_your_information">Silahkan login dengan informasi anda</string>
    <string name="email_address">Alamat Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="lupa_kata_sandi"><u>Lupa Kata Sandi?</u></string>
    <string name="please_register_with_your_information">Silahkan daftar sesuai informasi anda</string>
    <string name="your_name">Nama Lengkap</string>
    <string name="register">Daftar</string>
    <string name="username">Username</string>
    <string name="sudah_punya_akun">Sudah punya akun? <u>Silahkan Login</u></string>
    <string name="belum_punya_akun">Belum punya akun? <u>Silahkan Daftar</u></string>
    <string name="email_and_pass_empty">Alamat email dan kata sandi tidak boleh kosong!\n</string>
    <string name="login_success">Login Berhasil!</string>
    <string name="login_failed">Login Gagal!</string>
    <string name="failed">Gagal</string>
    <string name="please_wait">Harap tunggu..</string>
    <string name="success">Berhasil!</string>
    <string name="all_req">Semua field harus diisi!</string>
    <string name="register_success">Akun berhasil didaftarkan!</string>
    <string name="register_failed">Akun tidak berhasil didaftarkan..</string>
    <string name="icon_analyze">Icon Analyze</string>
    <string name="icon_analyze_desc">Icon Analyze</string>
    <string name="retry">Coba lagi</string>
    <string name="input_too_short">Pertanyaan terlalu pendek, harus lebih dari 20 karakter</string>
    <string name="input_too_short_desc">Deskripsi terlalu pendek, harus lebih dari 20 karakter</string>
    <string name="otp_sent_success">OTP berhasil terkirim.</string>
    <string name="otp_sent_failed">OTP gagal terkirim.</string>
    <string name="send_otp">Kirim Kode</string>
    <string name="verify_otp">Verifikasi</string>
    <string name="kembali_ke_halaman_lupa_password">Kembali</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="email_empty_error">Alamat email tidak boleh kosong</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="confirm_new_password">Konfirmasi Sandi Baru</string>
    <string name="submit">Simpan</string>
    <string name="batalkan">Batalkan</string>
    <string name="test_gmail_com">test@gmail.com</string>
    <string name="silahkan_masukkan_kode_yang_telah_kami_kirim">Silahkan masukkan kode yang telah kami kirim</string>
    <string name="otp_verification">Verifikasi Kode</string>
    <string name="resend_otp">Kirim ulang kode</string>
    <string name="deskripsi_forgotpw">Masukkan alamat email agar kami dapat mengirimkan kode</string>
    <string name="lupa_kata_sandi_title">Lupa Kata Sandi?</string>
    <string name="back_to_login">Kembali</string>
    <string name="back_to_otp">Kembali</string>
    <string name="otp_empty">Masukkan kode otp!</string>
    <string name="otp_verification_failed">Kode salah</string>
    <string name="otp_verified">Verifikasi berhasil</string>
    <string name="save_password">"Simpan Kata Sandi Baru "</string>
    <string name="save_password_success">Kata Sandi Baru Berhasil Tersimpan</string>
    <string name="save_password_failed">Kata Sandi Baru Tidak Berhasil Tersimpan</string>
    <string name="new_password_empty_error">Masukkan Kata Sandi Baru</string>
    <string name="old_password_empty_error">Masukkan Kata Sandi Lama</string>
    <string name="passwords_same_error">Kata Sandi Tidak Boleh Sama</string>
    <string name="old_and_new_password_empty">Masukkan Kata Sandi Lama dan Kata Sandi Baru</string>
    <string name="email_not_found">Email Tidak Ditemukan</string>
    <string name="lorem">lorem ipsum</string>
    <string name="plant_tips">Kiat budidaya</string>
    <string name="plant_description_body">deskripsi</string>
    <string name="plant_description">Deskripsi</string>
    <string name="favorite_button">Tambah ke favorit</string>
    <string name="plant_name">Nama Tanaman</string>
    <string name="plant_image">Gambar Tanaman</string>
    <string name="plant_detail">Detail Tanaman</string>
    <string name="back_button">Kembali</string>
    <string name="add_plant">Tambah tanaman</string>
    <string name="nama_tanaman">Nama Tanaman</string>
    <string name="set_reminder">Buat Pengingat</string>
    <string name="reminder_icon">Pengingat</string>
    <string name="more_options">Selengkapnya</string>
    <string name="bookmark">Tambah ke favorit</string>
    <string name="tab_my_plants">Tanamanku</string>
    <string name="tab_reminders">Pengingat</string>
    <string name="tab_analysis_history">Riwayat Analisis</string>
<<<<<<< Updated upstream
    <string name="detail_tanamanku">Detail Tanamanku</string>
    <string name="back">kembali</string>
    <string name="nama_tanman">Nama Tanman</string>
    <string name="desc_myplant">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="pengingat">Pengingat</string>
    <string name="tambah_pengingat">+ Tambah pengingat</string>
    <string name="water_reminder_icon">siram tanaman</string>
    <string name="siram_tanaman">Siram tanaman</string>
    <string name="fertilizer_reminder_icon">fertilizer reminder</string>
    <string name="rotate_plant_icon">rotate plant</string>
    <string name="humidity_reminder_icon">humidity reminder</string>
    <string name="titleAlarm">Judul Pengingat\n</string>
    <string name="messageaAlarm">Tulis Pesan</string>
    <string name="schedule_notification">Tambah Pengingat</string>
    <string name="dismiss">Dismiss</string>
    <string name="alarm_message">Tambahkan Pesan</string>
    <string name="alarm_title">Judul Pengingat</string>
    <string name="create_a_alarm">Tambah Pengingat</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="time">Time</string>
    <string name="messageAlarm">Tanaman apa yang ingin diberi pengingat?</string>
    <string name="label">Pilih Tanaman</string>
    <string name="image_desc">beri pupuk</string>
    <string name="image_pupuk">beri pupuk</string>
    <string name="image_siram">siram tanaman</string>
=======
>>>>>>> Stashed changes
    <string name="photo">Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="tambah_foto">Tambah Foto</string>
    <string name="pilih_jenis_tanaman">Pilih Jenis Tanaman</string>
    <string name="pertanyaan_diskusi">Pertanyaan Diskusi</string>
    <string name="deskripsi_pertanyaan">Deskripsi Pertanyaan</string>
    <string name="unggah">Unggah</string>
    <string name="icon_plant">Icon plant</string>
    <string name="galeri">Galeri</string>
    <string name="pilih_foto_dari_galeri_dan_analisis_tanaman">Pilih foto dari galeri dan analisis tanaman</string>
    <string name="icon_disease">Icon disease</string>
    <string name="kamera">Kamera</string>
    <string name="ambil_foto_dari_kamera_dan_analisis_tanaman">Ambil foto dari kamera dan analisis tanaman</string>
    <string name="analisis_tanaman_saya">Analisis Tanaman Saya</string>
    <string name="icon">Icon</string>
    <string name="more">More</string>
    <string name="_18h">18h</string>
    <string name="plant_type">Plant Type</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet</string>
    <string name="like">Like</string>
    <string name="_1">1</string>
    <string name="comment">Comment</string>
    <string name="tambah_komentar">Tambah Komentar</string>
    <string name="send">Send</string>
    <string name="think_icon">Think Icon</string>
    <string name="disease_name">Disease Name</string>
    <string name="disease_type">Disease Type</string>
    <string name="desc_icon">Desc Icon</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="icon_prevention">Icon Prevention</string>
    <string name="pencegahan">Pencegahan</string>
    <string name="icon_medic">Icon Medic</string>
    <string name="pengobatan">Pengobatan</string>
    <string name="icon_cure">Icon Cure</string>
    <string name="saran_obat_penyakit">Saran Obat Penyakit</string>
    <string name="hasil_diagnosa_penyakit">Hasil Diagnosa Penyakit</string>
    <string name="icon_one">Icon one</string>
    <string name="nama_penyakit">Nama Penyakit</string>
    <string name="nilai_keyakinan_analisis">Nilai Keyakinan Analisis:</string>
    <string name="_99_9">99.9</string>
    <string name="icon_two">Icon two</string>
    <string name="image_plant">Image Plant</string>
    <string name="yey">Yey</string>
    <string name="icon_desc">Icon Desc</string>
    <string name="tips_budidaya">Tips Budidaya</string>
    <string name="penyakit_terkait_tanaman_ini">Penyakit Terkait Tanaman Ini</string>
    <string name="edit">Edit</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="simpan">Simpan</string>
    <string name="verifikasi_email_anda">Verifikasi Email Anda</string>
    <string name="icon_jeruk">Icon Jeruk</string>
    <string name="icon_bunga">Icon Bunga</string>
    <string name="icon_tomat">Icon Tomat</string>
<<<<<<< Updated upstream
    <string name="search">Search</string>
    <string name="cari_di_diskusi">Cari di diskusi..</string>
    <string name="temukan_diskusi_terkait">Temukan diskusi terkait</string>
    <string name="tambah_diskusi">Tambah Diskusi</string>
=======
>>>>>>> Stashed changes

    <integer-array name="banners">
        <item>@drawable/welcome_banner</item>
        <item>@drawable/diagnose_banner</item>
        <item>@drawable/discussion_banner</item>
        <item>@drawable/budidaya_banner</item>
    </integer-array>

</resources>


