<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_alt"
    tools:context=".ui.forgotpw.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icon_login"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_plantpal"
        android:layout_marginBottom="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card"
        android:contentDescription="@string/icon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lupa_kata_sandi_title"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="1"
                tools:alpha="100"
                android:text="@string/deskripsi_forgotpw" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="1"
                tools:alpha="100"
                android:text="@string/email_address"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_login_email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="1"
                app:startIconDrawable="@drawable/baseline_email_24"
                tools:alpha="100">
                <com.android.plantpal.ui.customview.CustomEmailValid
                    android:id="@+id/ed_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSendOtp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/send_otp"
                app:cornerRadius="32dp" />

            <TextView
                android:id="@+id/btnBackToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/back_to_login"
                android:textStyle="bold"
                tools:alpha="100"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
