<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".ui.login.LoginActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="32sp"
                android:alpha="0"
                tools:alpha="100"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/welcome_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                tools:alpha="100"
                android:text="@string/please_login_with_your_information" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                tools:alpha="100"
                android:text="@string/email_address"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_login_email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                app:startIconDrawable="@drawable/baseline_email_24"
                tools:alpha="100">

                <com.android.plantpal.ui.customview.CustomEmailValid
                    android:id="@+id/ed_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:minHeight="48dp"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck"/>
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                tools:alpha="100"
                android:text="@string/password"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_login_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:alpha="0"
                tools:alpha="100"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.android.plantpal.ui.customview.CustomPasswordValid
                    android:id="@+id/ed_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/lupa_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0"
                tools:alpha="100"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/lupa_kata_sandi"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:alpha="0"
                tools:alpha="100"
                android:text="@string/login"
                app:cornerRadius="32dp" />

            <TextView
                android:id="@+id/belum_punya_akun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                tools:alpha="100"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/belum_punya_akun"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>











