<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_200"
    tools:context=".ui.otp.OtpVerificationActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/otp_verificaiton_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_verification"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/otp_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="1"
                tools:alpha="100"
                android:text="@string/silahkan_masukkan_kode_yang_telah_kami_kirim" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/emailForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#CC000000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/test_gmail_com"/>

            <com.chaos.view.PinView
                android:id="@+id/inputOtp"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="18sp"
                app:itemCount="5"
                app:itemHeight="48dp"
                app:itemRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerifyOtp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:alpha="1"
                tools:alpha="100"
                android:text="@string/verify_otp"
                app:cornerRadius="32dp" />

            <TextView
                android:id="@+id/btnBackToForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="1"
                android:focusable="true"
                tools:alpha="100"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/kembali_ke_halaman_lupa_password"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>