<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="14sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="12sp"
            android:textColor="#888"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/completedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selesai"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="end">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:layout_marginStart="1dp"
                android:text="Batalkan"/>

            <Button
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:layout_marginStart="1dp"
                android:text="Selesai"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
